# Leva-TTS

./: .gitignore  DESIGN_DOC.md  LICENSE  README.md  app.py  environment.yml  merge_files.py  pyproject.toml  pytest.ini
configs/: finetune_xtts.yaml
data/: levantine_lexicon.csv
docs/: index.html
examples/: 01_quick_start.ipynb  02_inference_server.ipynb  03_evaluation.ipynb  04_gradio_app.ipynb  README.md  pipecat_demo.py
hf_staging/: README.md
hf_staging_saudi/: README.md  config.json  references.json
leva_tts/: __init__.py  _model.py  cli.py
leva_tts/data/: aligner.py  download.py  preprocess.py
leva_tts/inference/: __init__.py  engine.py
leva_tts/pipecat_plugin/: __init__.py  leva_tts_service.py
leva_tts/server/: app.py  schemas.py
leva_tts/text/: __init__.py  levantine_lexicon.csv  lexicon.py  normalizer.py  processor.py
leva_tts/training/: callbacks.py  finetune.py
reference_audios/: references.json
scripts/: benchmark.py  download_hf_wavs.py  evaluate.py  gather_levantine_text.py  gather_saudi_text.py  gather_saudi_text_gemini.py  gather_saudi_text_gemini_batch.py  generate_lahgetna_data.py  inference.py  install_deepspeed.sh  prepare_dataset.py  reorganize_and_upload.py  run_lahgtna_generation.sh  run_saudi_pipeline.sh  train.py  upload_remaining_wavs.py
tests/: conftest.py  test_inference_package.py  test_inference_repo.py  test_pipecat.py  test_readme_examples.py  test_server.py  test_text_processing.py
wandb/: latest-run
wandb/run-20260611_202255-5om8t2hp/: run-5om8t2hp.wandb
wandb/run-20260611_202255-5om8t2hp/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260611_210851-am5nzblo/: run-am5nzblo.wandb
wandb/run-20260611_210851-am5nzblo/files/: config.yaml  wandb-metadata.json
wandb/run-20260611_210855-e6eugqkt/: run-e6eugqkt.wandb
wandb/run-20260611_210855-e6eugqkt/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260611_212158-wg336r4g/: run-wg336r4g.wandb
wandb/run-20260611_212158-wg336r4g/files/: wandb-metadata.json
wandb/run-20260612_162152-ygyfycyp/: run-ygyfycyp.wandb
wandb/run-20260612_162152-ygyfycyp/files/: wandb-metadata.json
wandb/run-20260612_172615-jannb05c/files/: config.yaml  wandb-metadata.json  wandb-summary.json
