[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "leva-tts"
version         = "0.1.8"
description     = "Low-latency Levantine Arabic / English code-switching TTS (fine-tuned XTTS-v2)"
readme          = "README.md"
license         = "Apache-2.0"
license-files   = ["LICENSE"]
requires-python = ">=3.10"
authors         = [{name = "Mohammed Aly", email = "mohammeda.ebrahim22@gmail.com"}]
keywords        = ["tts", "arabic", "levantine", "code-switching", "speech-synthesis", "xtts"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Maintained Coqui fork — exposes the same `TTS`/XTTS modules as the old,
    # unmaintained `TTS` package (which pins numpy==1.22.0 and cannot resolve
    # against librosa/numba on Python 3.10+). coqui-tts brings a coherent,
    # numpy-2-compatible dependency set (numpy>=1.26, transformers>=4.57,
    # librosa>=0.11, numba>=0.58). The [codec] extra pulls torchcodec, which
    # coqui-tts requires for audio IO on PyTorch >= 2.9.
    "coqui-tts[codec]>=0.27.5",
    # Cap torch < 2.9: torch 2.9+ ships CUDA-13 wheels that need a CUDA-13
    # driver, breaking on common CUDA-12.x drivers (validated on torch 2.3+cu121).
    # Staying < 2.9 keeps installs on cu12-compatible wheels.
    "torch>=2.3.0,<2.9",
    "torchaudio>=2.3.0,<2.9",
    "soundfile>=0.12.1",
    "librosa>=0.11.0",
    "huggingface_hub>=0.23.3",
    "rich>=13.7.1",
    "numpy>=1.26.0",
    "scipy>=1.11",
    "requests>=2.32",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "pandas>=1.5.3",
    "sympy",
    "transformers>=4.57,<5",
]

[project.optional-dependencies]
server   = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "websockets>=11"]
pipecat  = ["pipecat-ai>=0.0.48", "openai", "ormsgpack"]
gradio   = ["gradio>=4.37"]
all      = ["leva-tts[server,pipecat,gradio]"]

[project.scripts]
leva-tts         = "leva_tts.cli:main"
leva-tts-server  = "leva_tts.server.app:cli_main"

[project.urls]
Homepage    = "https://github.com/MohammedAly22/Leva-TTS"
Demo        = "https://mohammedaly22.github.io/Leva-TTS/"
Model       = "https://huggingface.co/mohammedaly22/leva-tts"
Space       = "https://huggingface.co/spaces/mohammedaly22/leva-tts"
Dataset     = "https://huggingface.co/datasets/mohammedaly22/lahgtna-levantine-tts"

[tool.setuptools.packages.find]
where   = ["."]
include = ["leva_tts*"]

[tool.setuptools.package-data]
leva_tts = ["py.typed", "text/*.csv"]
